// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debugTraceCallJsonRpcProcedure > should trace a transaction and return the expected result 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "debug_traceCall",
  "result": {
    "failed": false,
    "gas": "0x19b4",
    "returnValue": "0x",
    "structLogs": [
      {
        "depth": 0,
        "gas": "0xffffff",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 0,
        "stack": [],
      },
      {
        "depth": 0,
        "gas": "0xfffffc",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 2,
        "stack": [
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffff9",
        "gasCost": "0xf",
        "op": "MSTORE",
        "pc": 4,
        "stack": [
          "0x80",
          "0x40",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffed",
        "gasCost": "0x4",
        "op": "CALLVALUE",
        "pc": 5,
        "stack": [],
      },
      {
        "depth": 0,
        "gas": "0xffffeb",
        "gasCost": "0x6",
        "op": "DUP1",
        "pc": 6,
        "stack": [
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffe8",
        "gasCost": "0x6",
        "op": "ISZERO",
        "pc": 7,
        "stack": [
          "0x0",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffe5",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 8,
        "stack": [
          "0x0",
          "0x1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffe2",
        "gasCost": "0x14",
        "op": "JUMPI",
        "pc": 11,
        "stack": [
          "0x0",
          "0x1",
          "0xf",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffd8",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 15,
        "stack": [
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffd7",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 16,
        "stack": [
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffd5",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 17,
        "stack": [],
      },
      {
        "depth": 0,
        "gas": "0xffffd2",
        "gasCost": "0x4",
        "op": "CALLDATASIZE",
        "pc": 19,
        "stack": [
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffd0",
        "gasCost": "0x6",
        "op": "LT",
        "pc": 20,
        "stack": [
          "0x4",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffcd",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 21,
        "stack": [
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffca",
        "gasCost": "0x14",
        "op": "JUMPI",
        "pc": 24,
        "stack": [
          "0x0",
          "0x34",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffc0",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 25,
        "stack": [],
      },
      {
        "depth": 0,
        "gas": "0xffffbe",
        "gasCost": "0x6",
        "op": "CALLDATALOAD",
        "pc": 26,
        "stack": [
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffbb",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 27,
        "stack": [
          "0x60fe47b100000000000000000000000000000000000000000000000000000000",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffb8",
        "gasCost": "0x6",
        "op": "SHR",
        "pc": 29,
        "stack": [
          "0x60fe47b100000000000000000000000000000000000000000000000000000000",
          "0xe0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffb5",
        "gasCost": "0x6",
        "op": "DUP1",
        "pc": 30,
        "stack": [
          "0x60fe47b1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffb2",
        "gasCost": "0x6",
        "op": "PUSH4",
        "pc": 31,
        "stack": [
          "0x60fe47b1",
          "0x60fe47b1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffaf",
        "gasCost": "0x6",
        "op": "EQ",
        "pc": 36,
        "stack": [
          "0x60fe47b1",
          "0x60fe47b1",
          "0x60fe47b1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffac",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 37,
        "stack": [
          "0x60fe47b1",
          "0x1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffffa9",
        "gasCost": "0x14",
        "op": "JUMPI",
        "pc": 40,
        "stack": [
          "0x60fe47b1",
          "0x1",
          "0x38",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff9f",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 56,
        "stack": [
          "0x60fe47b1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff9e",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 57,
        "stack": [
          "0x60fe47b1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff9b",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 60,
        "stack": [
          "0x60fe47b1",
          "0x52",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff98",
        "gasCost": "0x6",
        "op": "DUP1",
        "pc": 62,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff95",
        "gasCost": "0x4",
        "op": "CALLDATASIZE",
        "pc": 63,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff93",
        "gasCost": "0x6",
        "op": "SUB",
        "pc": 64,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4",
          "0x4",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff90",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 65,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4",
          "0x20",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff8d",
        "gasCost": "0x6",
        "op": "ADD",
        "pc": 66,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4",
          "0x20",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff8a",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 67,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff87",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 68,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x24",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff84",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 71,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x24",
          "0x4",
          "0x4d",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff81",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 72,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x4",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff7e",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 73,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff7b",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 76,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0xf1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff73",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 241,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff72",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 242,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff70",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 243,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff6d",
        "gasCost": "0x6",
        "op": "DUP3",
        "pc": 245,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x20",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff6a",
        "gasCost": "0x6",
        "op": "DUP5",
        "pc": 246,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x20",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff67",
        "gasCost": "0x6",
        "op": "SUB",
        "pc": 247,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x20",
          "0x4",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff64",
        "gasCost": "0x6",
        "op": "SLT",
        "pc": 248,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x20",
          "0x20",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff61",
        "gasCost": "0x6",
        "op": "ISZERO",
        "pc": 249,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff5e",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 250,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff5b",
        "gasCost": "0x14",
        "op": "JUMPI",
        "pc": 253,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x1",
          "0x106",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff51",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 262,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff50",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 263,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff4e",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 264,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff4b",
        "gasCost": "0x6",
        "op": "DUP5",
        "pc": 267,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff48",
        "gasCost": "0x6",
        "op": "DUP3",
        "pc": 268,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff45",
        "gasCost": "0x6",
        "op": "DUP6",
        "pc": 269,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff42",
        "gasCost": "0x6",
        "op": "ADD",
        "pc": 270,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x0",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff3f",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 271,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff3c",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 274,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0xdd",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff34",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 221,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff33",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 222,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff31",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 223,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff2e",
        "gasCost": "0x6",
        "op": "CALLDATALOAD",
        "pc": 224,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x0",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff2b",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 225,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff28",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 226,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff26",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 227,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff23",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 230,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff20",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 231,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff1d",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 234,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xc7",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff15",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 199,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff14",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 200,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff11",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 203,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff0e",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 204,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff0b",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 207,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
          "0xbe",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff03",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 190,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff02",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 191,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffff00",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 192,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffefd",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 193,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
          "0x0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffefa",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 194,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffef8",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 195,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0xd0",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffef5",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 196,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x2a",
          "0x2a",
          "0xd0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffef2",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 197,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x2a",
          "0xd0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffef0",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 198,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x2a",
          "0xd0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffee8",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 208,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffee7",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 209,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffee4",
        "gasCost": "0x6",
        "op": "EQ",
        "pc": 210,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffee1",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 211,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffede",
        "gasCost": "0x14",
        "op": "JUMPI",
        "pc": 214,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
          "0x1",
          "0xda",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffed4",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 218,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffed3",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 219,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffed1",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 220,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
          "0xeb",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffec9",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 235,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffec8",
        "gasCost": "0x6",
        "op": "SWAP3",
        "pc": 236,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x113",
          "0x24",
          "0x4",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffec5",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 237,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x2a",
          "0x24",
          "0x4",
          "0x113",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffec2",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 238,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x2a",
          "0x113",
          "0x4",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffec0",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 239,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x2a",
          "0x113",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffebe",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 240,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x2a",
          "0x113",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffeb6",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 275,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffeb5",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 276,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x0",
          "0x0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffeb2",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 277,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x2a",
          "0x0",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffeb0",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 278,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffeae",
        "gasCost": "0x6",
        "op": "SWAP3",
        "pc": 279,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x4d",
          "0x24",
          "0x4",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffeab",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 280,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x24",
          "0x4",
          "0x4d",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffea8",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 281,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x4d",
          "0x4",
          "0x24",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffea6",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 282,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x4d",
          "0x4",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffea4",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 283,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x4d",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe9c",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 77,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe9b",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 78,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe98",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 81,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x72",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe90",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 114,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe8f",
        "gasCost": "0x6",
        "op": "DUP1",
        "pc": 115,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe8c",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 116,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe8a",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 117,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe87",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 118,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x2a",
          "0x0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xfffe84",
        "gasCost": "0x1388",
        "op": "SSTORE",
        "pc": 119,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x2a",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeafc",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 120,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeafa",
        "gasCost": "0x6",
        "op": "PUSH32",
        "pc": 121,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaf7",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 154,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaf4",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 155,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaf1",
        "gasCost": "0x6",
        "op": "MLOAD",
        "pc": 157,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0x2a",
          "0x40",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaee",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 158,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0x2a",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaeb",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 161,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0x2a",
          "0x80",
          "0xa7",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeae8",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 162,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x80",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeae5",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 163,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeae2",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 166,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0x12b",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeada",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 299,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffead9",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 300,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffead7",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 301,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffead4",
        "gasCost": "0x6",
        "op": "DUP3",
        "pc": 303,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0x0",
          "0x20",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffead1",
        "gasCost": "0x6",
        "op": "ADD",
        "pc": 304,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0x0",
          "0x20",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeace",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 305,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0x0",
          "0xa0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeacb",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 306,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeac9",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 307,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeac6",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 310,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeac4",
        "gasCost": "0x6",
        "op": "DUP4",
        "pc": 311,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeac1",
        "gasCost": "0x6",
        "op": "ADD",
        "pc": 312,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x0",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeabe",
        "gasCost": "0x6",
        "op": "DUP5",
        "pc": 313,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeabb",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 314,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeab8",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 317,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x11c",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeab0",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 284,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaaf",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 285,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaac",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 288,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaa9",
        "gasCost": "0x6",
        "op": "PUSH2",
        "pc": 289,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffeaa6",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 292,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
          "0xbe",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea9e",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 190,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea9d",
        "gasCost": "0x4",
        "op": "PUSH0",
        "pc": 191,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea9b",
        "gasCost": "0x6",
        "op": "DUP2",
        "pc": 192,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea98",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 193,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
          "0x0",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea95",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 194,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
          "0x2a",
          "0x0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea93",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 195,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x125",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea90",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 196,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x2a",
          "0x2a",
          "0x125",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea8d",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 197,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x2a",
          "0x125",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea8b",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 198,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x2a",
          "0x125",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea83",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 293,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea82",
        "gasCost": "0x6",
        "op": "DUP3",
        "pc": 294,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea7f",
        "gasCost": "0xc",
        "op": "MSTORE",
        "pc": 295,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
          "0x2a",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea76",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 296,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea74",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 297,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea72",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 298,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
          "0x13e",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea6a",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 318,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea69",
        "gasCost": "0x6",
        "op": "SWAP3",
        "pc": 319,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa7",
          "0x2a",
          "0x80",
          "0xa0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea66",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 320,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
          "0x2a",
          "0x80",
          "0xa7",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea63",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 321,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
          "0xa7",
          "0x80",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea61",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 322,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
          "0xa7",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea5f",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 323,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
          "0xa7",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea57",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 167,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea56",
        "gasCost": "0x6",
        "op": "PUSH1",
        "pc": 168,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea53",
        "gasCost": "0x6",
        "op": "MLOAD",
        "pc": 170,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
          "0x40",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea50",
        "gasCost": "0x6",
        "op": "DUP1",
        "pc": 171,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea4d",
        "gasCost": "0x6",
        "op": "SWAP2",
        "pc": 172,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0xa0",
          "0x80",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea4a",
        "gasCost": "0x6",
        "op": "SUB",
        "pc": 173,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0x80",
          "0x80",
          "0xa0",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea47",
        "gasCost": "0x6",
        "op": "SWAP1",
        "pc": 174,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0x80",
          "0x20",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffea44",
        "gasCost": "0x565",
        "op": "LOG1",
        "pc": 175,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
          "0x12c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc",
          "0x20",
          "0x80",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffe656",
        "gasCost": "0x4",
        "op": "POP",
        "pc": 176,
        "stack": [
          "0x60fe47b1",
          "0x52",
          "0x2a",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffe654",
        "gasCost": "0x10",
        "op": "JUMP",
        "pc": 177,
        "stack": [
          "0x60fe47b1",
          "0x52",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffe64c",
        "gasCost": "0x2",
        "op": "JUMPDEST",
        "pc": 82,
        "stack": [
          "0x60fe47b1",
        ],
      },
      {
        "depth": 0,
        "gas": "0xffe64b",
        "gasCost": "0x0",
        "op": "STOP",
        "pc": 83,
        "stack": [
          "0x60fe47b1",
        ],
      },
    ],
  },
}
`;

exports[`debugTraceCallJsonRpcProcedure > should trace a transaction and return the expected result with prestateTracer 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "debug_traceCall",
  "result": {
    "0x0000000000000000000000000000000000000000": {
      "balance": "0x3635c9adc5dea00000",
      "code": "0x",
      "nonce": 0,
      "storage": {},
    },
    "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
      "balance": "0x0",
      "code": "0x608060405234801561000f575f80fd5b5060043610610034575f3560e01c806360fe47b1146100385780636d4ce63c14610054575b5f80fd5b610052600480360381019061004d91906100f1565b610072565b005b61005c6100b2565b604051610069919061012b565b60405180910390f35b805f819055507f012c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc816040516100a7919061012b565b60405180910390a150565b5f8054905090565b5f80fd5b5f819050919050565b6100d0816100be565b81146100da575f80fd5b50565b5f813590506100eb816100c7565b92915050565b5f60208284031215610106576101056100ba565b5b5f610113848285016100dd565b91505092915050565b610125816100be565b82525050565b5f60208201905061013e5f83018461011c565b9291505056fea2646970667358221220792d4ee4a770b6a319a0ec659b77ea24497824649e20dcdea1dd7acf6118a5fe64736f6c63430008160033",
      "nonce": 1,
      "storage": {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x01",
      },
    },
  },
}
`;

exports[`debugTraceCallJsonRpcProcedure > should trace a transaction and return the expected result with prestateTracer 2`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "debug_traceCall",
  "result": {
    "post": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x3635c9adc5de9d0848",
        "nonce": 1,
      },
      "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
        "storage": {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x2a",
        },
      },
    },
    "pre": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x3635c9adc5dea00000",
        "code": "0x",
        "nonce": 0,
        "storage": {},
      },
      "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
        "balance": "0x0",
        "code": "0x608060405234801561000f575f80fd5b5060043610610034575f3560e01c806360fe47b1146100385780636d4ce63c14610054575b5f80fd5b610052600480360381019061004d91906100f1565b610072565b005b61005c6100b2565b604051610069919061012b565b60405180910390f35b805f819055507f012c78e2b84325878b1bd9d250d772cfe5bda7722d795f45036fa5e1e6e303fc816040516100a7919061012b565b60405180910390a150565b5f8054905090565b5f80fd5b5f819050919050565b6100d0816100be565b81146100da575f80fd5b50565b5f813590506100eb816100c7565b92915050565b5f60208284031215610106576101056100ba565b5b5f610113848285016100dd565b91505092915050565b610125816100be565b82525050565b5f60208201905061013e5f83018461011c565b9291505056fea2646970667358221220792d4ee4a770b6a319a0ec659b77ea24497824649e20dcdea1dd7acf6118a5fe64736f6c63430008160033",
        "nonce": 1,
        "storage": {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x01",
        },
      },
    },
  },
}
`;
